<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid2"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.93"/>
    <TextView
        android:id="@+id/fmSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fm_signup_title"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/login_head_text_color"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="96dp"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        />
    <TextView
        android:id="@+id/fmSignUpEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:fontFamily="@font/karla"
        android:text="@string/email_title"
        android:textColor="@color/login_text_color"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        app:layout_constraintTop_toBottomOf="@+id/fmSignUp" />
    <EditText
        android:id="@+id/fmEnterEmail"
        style="@style/fmLogRegEditText"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        app:layout_constraintDimensionRatio="6.52"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@id/fmSignUpEmail"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        app:layout_constraintEnd_toEndOf="@id/guid2"
        />
    <TextView
        android:id="@+id/fmSignUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/karla"
        android:text="@string/password_title"
        android:textColor="@color/login_text_color"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        app:layout_constraintTop_toBottomOf="@+id/fmEnterEmail" />
    <EditText
        android:id="@+id/fmEnterPassword"
        style="@style/fmLogRegEditText"
        app:layout_constraintDimensionRatio="6.52"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@id/fmSignUpPassword"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        app:layout_constraintEnd_toEndOf="@id/guid2"
        />
    <TextView
        android:id="@+id/fmRePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/karla"
        android:text="@string/repeat_password"
        android:textColor="@color/login_text_color"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        app:layout_constraintTop_toBottomOf="@+id/fmEnterPassword" />
    <EditText
        android:id="@+id/fmReEnterPassword"
        style="@style/fmLogRegEditText"
        app:layout_constraintDimensionRatio="6.52"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@id/fmRePassword"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        app:layout_constraintEnd_toEndOf="@id/guid2"
        />
    <TextView
        android:id="@+id/fmAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_avatar"
        android:fontFamily="@font/poppins_bold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/fmReEnterPassword"
        app:layout_constraintStart_toEndOf="@+id/guid1"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fmSignUpButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/login_button_back"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/karla"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="8.068"
        app:layout_constraintEnd_toEndOf="@id/guid2"
        app:layout_constraintStart_toStartOf="@+id/guid1" />

</androidx.constraintlayout.widget.ConstraintLayout>