<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid2"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.93"/>
    <TextView
        android:id="@+id/fmName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fm_app_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:textSize="36sp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/fmCategoryGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_genre"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/fmName"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guid1"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fmCategoryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/fmCategoryGenre"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fmSavedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_save"
        android:fontFamily="@font/poppins"
        app:layout_constraintWidth_percent="0.446"
        app:layout_constraintDimensionRatio="4.404"
        android:background="@drawable/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="42dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>