<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid2"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.93"/>
    <View
        android:id="@+id/fmSavedAlbumsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="2.3"
        android:layout_marginTop="17dp"
        android:background="@drawable/saved_shape"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        app:layout_constraintEnd_toEndOf="@+id/guid2"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/fmArtistPoster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:background="@drawable/ic_launcher_background"
        app:layout_constraintWidth_percent="0.224"
        app:layout_constraintDimensionRatio="1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="21dp"
        app:layout_constraintTop_toTopOf="@id/fmSavedAlbumsView"
        app:layout_constraintStart_toStartOf="@id/fmSavedAlbumsView"/>
    <TextView
        android:id="@+id/fmSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/fm_song_title"
        tools:text="Title: Dynamite"
        app:layout_constraintStart_toEndOf="@+id/fmArtistPoster"
        app:layout_constraintTop_toTopOf="@+id/fmSavedAlbumsView"
        />
    <TextView
        android:id="@+id/fmArtistTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:text="@string/fm_artist_title"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="Artist: Bts"
        app:layout_constraintStart_toEndOf="@+id/fmArtistPoster"
        app:layout_constraintTop_toBottomOf="@+id/fmSongTitle"
        />
    <TextView
        android:id="@+id/fmPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:text="@string/fm_position"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="Position:1"
        app:layout_constraintStart_toEndOf="@+id/fmArtistPoster"
        app:layout_constraintTop_toBottomOf="@+id/fmArtistTitle"
        />
    <TextView
        android:id="@+id/fmReadMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_more"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginEnd="11dp"
        android:fontFamily="@font/poppins"
        android:layout_marginBottom="11dp"
        android:textColor="@color/read_more_color"
        app:layout_constraintBottom_toBottomOf="@+id/fmSavedAlbumsView"
        app:layout_constraintEnd_toEndOf="@+id/fmSavedAlbumsView"/>

</androidx.constraintlayout.widget.ConstraintLayout>