<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid2"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.93"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fmProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.218"
        app:layout_constraintDimensionRatio="1"
        tools:background="@drawable/profile"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/fmUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fm_user_hello"
        android:fontFamily="@font/poppins"
        tools:text="Hello revaz"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/fmProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/fmProfileAlbums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/fm_saved_albums"
        tools:text="You have saved 3 Albums"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/fmUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/fmProfileArtists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/fm_favorite_artist"
        tools:text="Your favorite artist is BTS"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/fmProfileAlbums"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/fmProfileCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/fm_saved_albums"
        tools:text="You have saved 3 Albums"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/fmProfileArtists"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fmLogOutButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/karla"
        android:text="@string/log_out"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/login_button_back"
        android:backgroundTint="@color/black"
        android:layout_marginBottom="18dp"
        app:layout_constraintDimensionRatio="8.068"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        app:layout_constraintEnd_toEndOf="@id/guid2"/>

</androidx.constraintlayout.widget.ConstraintLayout>