<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid2"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.93"/>
    <TextView
        android:id="@+id/fmName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fm_app_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:textSize="36sp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/fmGenreSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/poppins"
        android:text="@string/search_in_category"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        app:layout_constraintTop_toBottomOf="@+id/fmName" />
    <EditText
        android:id="@+id/fmSearch"
        app:layout_constraintTop_toBottomOf="@+id/fmGenreSearch"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:paddingStart="19dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/search_here"
        android:layout_marginTop="22dp"
        android:background="@drawable/edit_background"
        app:layout_constraintWidth_percent="0.608"
        app:layout_constraintDimensionRatio="6"
        tools:ignore="RtlSymmetry" />
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/fmSearchButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.101"
        app:layout_constraintDimensionRatio="1"
        android:background="@drawable/edit_background"
        app:icon="@drawable/ic_fm_search"
        app:layout_constraintStart_toEndOf="@+id/fmSearch"
        app:layout_constraintTop_toTopOf="@+id/fmSearch"
        android:layout_marginStart="28dp"
        />
    <ImageView
        android:id="@+id/fm_search_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.057"
        app:layout_constraintDimensionRatio="1"
        android:background="@drawable/ic_fm_search"
        app:layout_constraintStart_toStartOf="@+id/fmSearchButton"
        app:layout_constraintEnd_toEndOf="@+id/fmSearchButton"
        app:layout_constraintTop_toTopOf="@id/fmSearchButton"
        app:layout_constraintBottom_toBottomOf="@id/fmSearchButton"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fmCategoryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/fmSearch"/>

</androidx.constraintlayout.widget.ConstraintLayout>