<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guid1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.07"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid2"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.93"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fmBack"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/ic_fm_back"
        android:drawableStart="@drawable/ic_fm_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fmShare"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/ic_fm_share"
        android:drawableStart="@drawable/ic_fm_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="12dp"
        />
 <de.hdodenhof.circleimageview.CircleImageView
     android:id="@+id/fmAboutPoster"
     android:layout_width="0dp"
     android:layout_height="0dp"
     app:layout_constraintWidth_percent="0.217"
     app:layout_constraintDimensionRatio="1"
     android:layout_marginTop="33dp"
     tools:background="@drawable/ic_launcher_background"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:civ_border_overlay="true"
     tools:ignore="MissingClass" />

    <TextView
        android:id="@+id/fmSongTitleAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fm_song_title_about"
        tools:text="Dynamite"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/fmAboutPoster"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        app:layout_constraintEnd_toEndOf="@+id/guid2"/>
    <TextView
        android:id="@+id/fmByAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fm_by"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/fmSongTitleAbout"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        app:layout_constraintEnd_toEndOf="@+id/guid2"/>
    <TextView
        android:id="@+id/fmArtistTitleAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_about"
        tools:text="BTS"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:textSize="18sp"
        android:textColor="@color/artist_about_color"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/fmByAbout"
        app:layout_constraintStart_toStartOf="@+id/guid1"
        app:layout_constraintEnd_toEndOf="@+id/guid2"/>


</androidx.constraintlayout.widget.ConstraintLayout>